# ai-drama

./: .dockerignore  .gitignore  Dockerfile  README.md
desktop/: README.md  pyproject.toml
desktop/packaging/pyinstaller/: ai-drama-desktop.spec
desktop/packaging/windows/: ai-drama-desktop.iss
desktop/scripts/: build-package.ps1  build-package.sh
desktop/src/aidrama_desktop/: local_agent.py  main.py  update.py
desktop/src/aidrama_desktop/api/: client.py  diagnostics.py
desktop/src/aidrama_desktop/assets/: app-icon.icns
desktop/src/aidrama_desktop/auth/: remembered_login.py  token_store.py
desktop/src/aidrama_desktop/browser/: chrome.py
desktop/src/aidrama_desktop/config/: settings.py
desktop/src/aidrama_desktop/contracts/: __init__.py  generator.py
desktop/src/aidrama_desktop/gui/: app.py  state.py
desktop/src/aidrama_desktop/storyboard/: __init__.py  generator.py
desktop/src/aidrama_desktop/tasks/: runner.py
desktop/src/aidrama_desktop/video/: ffmpeg.py  reassembly.py
desktop/tests/: test_api_client_device.py  test_chrome_profiles.py  test_contract_generator.py  test_drama_library.py  test_ffmpeg.py  test_gui_state.py  test_local_agent.py  test_network_diagnostics.py  test_platform_registry.py  test_remembered_login.py  test_settings_device_id.py  test_storyboard_generator.py  test_task_runner.py  test_tiktok_publisher.py  test_token_store.py  test_update.py
docs/: API设计.md  macos-client-install.docx  macos-client-install.md  windows-client-install.docx  windows-client-install.md  功能文档.md  技术文档.md
scripts/: deploy-frontend.sh  (+4 more)
(+227 files in other folders)
