[project]
name = "ai-drama-desktop"
version = "0.1.3"
description = "Desktop agent for AI drama distribution"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.1",
  "playwright>=1.49.0",
  "pydantic>=2.10.3",
  "pydantic-settings>=2.6.1",
  "PySide6>=6.8.1",
  "python-docx>=1.1.2",
  "typer>=0.15.1",
  "platformdirs>=4.3.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.4", "ruff>=0.8.2"]

[project.scripts]
aidrama-desktop = "aidrama_desktop.main:app"
aidrama-desktop-app = "aidrama_desktop.gui.app:main"

[tool.setuptools.package-data]
aidrama_desktop = ["assets/*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
